# Nedvizhka.by

./: Dockerfile  README.md  pyproject.toml
nedvizhka/: db.sqlite3  manage.py
nedvizhka/api/: serializers.py  tests.py  urls.py  views.py
nedvizhka/favorite/: models.py
nedvizhka/nedvizhka/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
nedvizhka/sale/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
nedvizhka/sale/migrations/: 0001_initial.py  0002_alter_flat_title_alter_garage_title_and_more.py  0003_rename_square_garage_total_area_and_more.py  0004_alter_flat_address_alter_flat_facilities_and_more.py  0005_flat_creator_garage_creator_house_creator_and_more.py  0006_flat_is_moderated_garage_is_moderated_and_more.py  0007_remove_flat_photo_remove_garage_photo_and_more.py  0008_remove_warehouse_condition_and_more.py  0009_remove_garage_renovation_remove_industrial_condition_and_more.py  0010_flat_image2_flat_image3_flat_image4_flat_image5_and_more.py  0011_rename_image2_flat_image_2_and_more.py  0012_house_bathroom.py  0013_industrial_condition_office_number_of_floors_and_more.py
nedvizhka/sale/templates/: about.html  base.html  delete.html  edit.html  flat.html  flatcreateview.html  flatdetailview.html  garage.html  garagedetailview.html  house.html  housecreateview.html  housedetailview.html  industrial.html  industrialcreateview.html  industrialdetailview.html  login.html  nedvizhka.html  office.html  officedetailview.html  parking.html  parkingdetailview.html  (+7 more)
nedvizhka/user_profile/: forms.py  models.py  urls.py  views.py
(+6 files in other folders)
